--- a/index.html
+++ b/index.html
@@ -41,7 +41,15 @@
         </div>
     </header>
 
+    <div class="container-fluid"> <!--Bootstrap Container-->
+        <div class="row">
+            <h2 class="render-heading">
+                Renders
+            </h2>
+            <div class="col-4"></div>
+        </div>
 
+    </div> <!--Bootstrap Container-->
 
 </body>
 </html>
