--- a/index.html
+++ b/index.html
@@ -42,14 +42,42 @@
     </header>
 
     <div class="container-fluid"> <!--Bootstrap Container-->
+        <h2 class="render-heading">
+            Renders
+        </h2>
         <div class="row">
-            <h2 class="render-heading">
-                Renders
-            </h2>
-            <div class="col-4"></div>
+            <div class="col-4">
+                <div class="title-overlay">
+                    <div class="title-cards">
+
+                    </div>
+                </div>
+            </div>
+            <div class="col-4">
+                <div class="title-overlay">
+                    <div class="title-cards">
+
+                    </div>
+                </div>
+            </div>
+            <div class="col-4">
+                <div class="-title-overlay">
+                    <div class="title-cards">
+
+                    </div>
+                </div>
+            </div>
         </div>
 
     </div> <!--Bootstrap Container-->
+
+
+    <footer>
+        <div class="footer-Logo">
+            <p>Morris Animations</p>
+        </div>
+        <div class="socials"></div>
+    </footer>
 
 </body>
 </html>
